--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -11,7 +11,7 @@
     <script src="/static/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="container" style="background-color: white;margin-top: 25px;">
+    <div class="container" style="background-color: white;margin-top: 25px;margin-bottom: 25px;">
         <div class="row">
             <div class="col-md-12">
                 <h3>Yaoren's Blog</h3>
@@ -120,18 +120,88 @@
                     </div>
                 </div>
 
+                <div class="row" style="border-bottom: 4px double#E5E5E5;margin-top: 25px;">
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <a>第一次写shell脚本，记录下</a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4 col-xs-3">
+                                <p>分类:linux</p>
+                            </div>
+                            <div class="col-md-4 col-xs-3">
+                                <p>阅读:177</p>
+                            </div>
+                            <div class="col-md-4 col-xs-6">
+                                <p>发布时间:2017/04/17</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p>1 冒泡排序的思想类似气泡上升，数组前后元素两两比较，如果前面的元素比后面的大就交换位置，每趟排序都可以确定最大值的位置2 选择排序思想类似打擂台，每趟比较都把最小的值排在数组最前面，每趟比较都可以确定最小值的位置package com.core.sort;public class SortTest {	pu......</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row" style="border-bottom: 4px double#E5E5E5;margin-top: 25px;">
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <a>第一次写shell脚本，记录下</a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4 col-xs-3">
+                                <p>分类:linux</p>
+                            </div>
+                            <div class="col-md-4 col-xs-3">
+                                <p>阅读:177</p>
+                            </div>
+                            <div class="col-md-4 col-xs-6">
+                                <p>发布时间:2017/04/17</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p>1 冒泡排序的思想类似气泡上升，数组前后元素两两比较，如果前面的元素比后面的大就交换位置，每趟排序都可以确定最大值的位置2 选择排序思想类似打擂台，每趟比较都把最小的值排在数组最前面，每趟比较都可以确定最小值的位置package com.core.sort;public class SortTest {	pu......</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row" style="border-bottom: 4px double#E5E5E5;margin-top: 25px;">
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <a>第一次写shell脚本，记录下</a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4 col-xs-3">
+                                <p>分类:linux</p>
+                            </div>
+                            <div class="col-md-4 col-xs-3">
+                                <p>阅读:177</p>
+                            </div>
+                            <div class="col-md-4 col-xs-6">
+                                <p>发布时间:2017/04/17</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p>1 冒泡排序的思想类似气泡上升，数组前后元素两两比较，如果前面的元素比后面的大就交换位置，每趟排序都可以确定最大值的位置2 选择排序思想类似打擂台，每趟比较都把最小的值排在数组最前面，每趟比较都可以确定最小值的位置package com.core.sort;public class SortTest {	pu......</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
-            <div class="col-md-3 col-md-offset-1">
+            <div class="col-md-3 col-md-offset-1" style="margin-top: 15px;">
                 <div class="row">
-                    <!--<div class="col-md-12">
-                        <div class="search_input">
-                            <form onsubmit="return checkForm()">
-                                <input id="q" name="q" type="text" placeholder="请输入你想搜索的内容" class="search_value">
-                                <input type="submit" class="search_btn" value="">
-                            </form>
-                        </div>
-                    </div>-->
                     <form>
                         <div class="col-md-8 col-xs-8" style="margin-right: -14px;">
                             <input id="q" name="q" type="text" placeholder="请输入要搜索的内容" class="search_value">
@@ -140,6 +210,180 @@
                             <input type="submit" value="搜索" class="search_btn">
                         </div>
                     </form>
+                </div>
+
+                <div class="row" style="margin-top: 25px;">
+                    <div class="col-md-12">
+                        <p>热门文章</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">nginx反向代理到多台tomcat配置--177阅读</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">解决ueditor打开图片上传慢的问题</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">nginx反向代理到多台tomcat配置</a>
+                    </div>
+                </div>
+
+                <div class="row" style="margin-top: 25px;">
+                    <div class="col-md-12">
+                        <p>近期文章</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">nginx反向代理到多台tomcat配置</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">nginx反向代理到多台tomcat配置</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">nginx反向代理到多台tomcat配置</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">nginx反向代理到多台tomcat配置</a>
+                    </div>
+                </div>
+
+                <div class="row" style="margin-top: 25px;">
+                    <div class="col-md-12">
+                        <p>近期评论</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">nginx反向代理到多台tomcat配置</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">nginx反向代理到多台tomcat配置</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">nginx反向代理到多台tomcat配置</a>
+                    </div>
+                </div>
+
+                <div class="row" style="margin-top: 25px;">
+                    <div class="col-md-12">
+                        <p>分类目录</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">java(7)</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">linux(10)</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">redis(11)</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">mongodb(12)</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">docker(12)</a>
+                    </div>
+                </div>
+
+                <div class="row" style="margin-top: 25px;">
+                    <div class="col-md-12">
+                        <p>日期归档</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">2017-04</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">2017-05</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">2017-06</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">2017-07</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">2017-08</a>
+                    </div>
+                </div>
+
+                <div class="row" style="margin-top: 25px;">
+                    <div class="col-md-12">
+                        <p>友情链接</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">Yaoren的gitHub</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">开源中国</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#">码云</a>
+                    </div>
                 </div>
             </div>
         </div>
