替换新皮肤=.=

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div class="container" style="background-color: white;margin-top: 25px;margin-bottom: 25px;">
+
         <div class="row">
             <div class="col-md-12">
                 <h3>Yaoren's Blog</h3>
@@ -195,6 +196,30 @@
                                 <p>1 冒泡排序的思想类似气泡上升，数组前后元素两两比较，如果前面的元素比后面的大就交换位置，每趟排序都可以确定最大值的位置2 选择排序思想类似打擂台，每趟比较都把最小的值排在数组最前面，每趟比较都可以确定最小值的位置package com.core.sort;public class SortTest {	pu......</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <nav aria-label="Page navigation">
+                            <ul class="pagination">
+                                <li>
+                                    <a href="#" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                    </a>
+                                </li>
+                                <li><a href="#">1</a></li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                                <li><a href="#">4</a></li>
+                                <li><a href="#">5</a></li>
+                                <li>
+                                    <a href="#" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
 
